--- a/swiggy-backend/src/main/resources/application.properties
+++ b/swiggy-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=swiggy-backend
 
 # Server
-server.port=8080
+server.port=8081
 
 # Database
 spring.datasource.url=jdbc:mysql://localhost:3306/mini_swiggy?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
@@ -13,7 +13,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # JWT
 jwt.secret=miniSwiggySecretKey2024_VeryLongSecureKeyForJWTSigning_AtLeast256Bits
